[package]
name = "rust-pipeline-example"
version = "0.1.0"
edition = "2021"
description = "Simple Rust pipeline showing quality gates"
repository = "https://github.com/nathantc/rust-pipeline-example"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.13"
futures = "0.3"

[[test]]
name = "gherkin-example" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
